src/test/testData/inspections/semantic-error-inspector/MissingImplementation1.toit
interface A:
 a

class <error descr="Missing implementation of
>> a">B </error>implements A:
